# pte-ecg

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
scripts/: profile_morphological.py  profile_morphological_comparison.py  test_all_extractors.py  test_extractors_simple.py  test_optimization.py  test_refactored_api.py  visualize_peak_detection.py
src/pte_ecg/: __init__.py  _logging.py  constants.py  core.py  ecg_feature_extractor.py  features.py  pipelines.py  preprocessing.py  types.py
src/pte_ecg/config/: __init__.py  loaders.py  models.py
src/pte_ecg/feature_extractors/: __init__.py  _neurokit2.py  base.py  fft.py  morphological.py  nonlinear.py  registry.py  statistical.py  utils.py  waveshape.py  welch.py
tests/: conftest.py  test_feature_extractors.py  test_n_jobs.py  test_pipelines.py  test_preprocessing_no_mne.py
