[project]
name = "pte-ecg"
description = "A package for standardized ECG feature extraction."
readme = "README.md"
authors = [{ name = "Richard M. Köhler", email = "richard.koehler@outlook.de" }]
maintainers = [
    { name = "Richard M. Köhler", email = "richard.koehler@outlook.de" },
]
requires-python = ">=3.11"
dependencies = [
    "h5py>=3.15.1",
    "matplotlib>=3.10.7",
    "neurokit2>=0.2.11",
    "numpy>=2.0.0",
    "pandas>=2.3.0",
    "pyarrow>=22.0.0",
    "pydantic>=2.11.7",
    "pywavelets>=1.8.0", # This is actually a neurokit2 dependency
    "scipy>=1.15.3",
    "tqdm>=4.66.0",
    "ts2vg>=1.2.4", # This is actually a neurokit2 dependency
]
dynamic = ["version"]
keywords = ["ecg", "features", "timeseries", "electrocardiogram"]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]

[project.entry-points."pte_ecg.extractors"]
fft = "pte_ecg.feature_extractors.fft:FFTExtractor"
morphological = "pte_ecg.feature_extractors.morphological:MorphologicalExtractor"
statistical = "pte_ecg.feature_extractors.statistical:StatisticalExtractor"
welch = "pte_ecg.feature_extractors.welch:WelchExtractor"
nonlinear = "pte_ecg.feature_extractors.nonlinear:NonlinearExtractor"
waveshape = "pte_ecg.feature_extractors.waveshape:WaveShapeExtractor"

[dependency-groups]
dev = ["mypy", "pre-commit", "tox"]
lint = ["ruff"]
test = ["pytest>=6.0", "pytest-cov>=4.2.0"]
nonlinear = ["nolds>=0.6.2"]
bispectrum = ["pybispectra>=1.2.1", "numba>=0.61.2"]
all = ["nolds>=0.6.2", "pybispectra>=1.2.1", "numba>=0.61.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/pte_ecg/__init__.py"

[tool.uv]
default-groups = "all"

[tool.pytest.ini_options]
testpaths = "tests"
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "-v --cov=pte_ecg --cov-report=term-missing"
filterwarnings = ["ignore::DeprecationWarning", "ignore::FutureWarning"]

[tool.ruff]
line-length = 120
exclude = ["scripts/"]

[tool.ty.src]
exclude = ["scripts/"]
